# CPP-File-Manager

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  fmanager
.github/workflows/: blank.yml  build-filemanager.yml
include/: FileManager.hpp
samples/: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  FileManager.hpp  Makefile  README.md  cmake_install.cmake  out  sample.cpp  tree.txt
src/: FileManager.cpp
